--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,34 @@ hgroup, .header__cta {
 	color: #fff;
 }
 
+hgroup {
+	border-top: solid;
+	border-bottom: solid;
+}
+
+.header__cta {
+	margin-top: 50px;
+}
+
+h1 {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 45px;
+}
+
+h2 {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+	text-transform: uppercase;
+	font-size: 21px;
+}
+
+p {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 200;
+}
+
 .header__container {
 	position: absolute;
 	top: 20px;
@@ -80,4 +108,17 @@ hgroup, .header__cta {
 .carousel-control-next, .carousel-control-prev {
 	align-items: flex-end;
 	bottom: 20px;
+}
+
+.carousel-shadow {
+	background: rgba(0,0,0,0.5);
+	height: 80vh;
+	width: 100%;
+	position: absolute;
+}
+
+.carousel-indicators li {
+	border-radius: 50%;
+	width: 10px;
+	height: 10px;
 }
